tests/snapshots/diagnostic_snapshots__diag_row_unification_mismatch_at_lambda.snap
---
source: tests/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "type error in lambda in function 'test': effect mismatch: expected `{Foo}`, found `{Bar, e}`"
  span:
    start: 180
    end: 199
  severity: Error
  labels:
    - span:
        start: 154
        end: 157
      message: enclosing function effect contract is declared here
  phase: TypeChecking
