tests/snapshots/diagnostic_snapshots__diag_syntax_error.snap
---
source: tests/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "syntax error: unexpected token"
  span:
    start: 0
    end: 12
  severity: Error
  phase: Parsing
- message: "syntax error: unexpected token"
  span:
    start: 0
    end: 12
  severity: Error
  phase: Parsing
