tests/snapshots/diagnostic_snapshots__diag_unhandled_effect_multiple.snap
---
source: tests/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "Pipeline failed: pass `lower-handle-dispatch` failed: conversion boundary `ability-lowered` failed with 1 error(s):\n  - ability.perform (op343, Illegal)\n"
  span:
    start: 0
    end: 0
  severity: Error
  phase: Lowering
- message: "function 'main' has unhandled effects: Foo, Bar"
  span:
    start: 75
    end: 125
  severity: Error
  phase: TypeChecking
