tests/snapshots/diagnostic_snapshots__diag_unknown_struct_field.snap
---
source: tests/diagnostic_snapshots.rs
assertion_line: 163
expression: diagnostics
---
- message: "unknown field `z` for struct `Point`"
  span:
    start: 59
    end: 88
  severity: Error
  phase: TypeChecking
