tests/snapshots/diagnostic_snapshots__diag_unresolved_method_after_tdnr.snap
---
source: tests/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "unresolved method 'missing' for this receiver type"
  span:
    start: 65
    end: 80
  severity: Error
  phase: TypeChecking
