tests/snapshots/diagnostic_snapshots__diag_unresolved_name.snap
---
source: tests/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "unresolved name `undefined_var`"
  span:
    start: 19
    end: 32
  severity: Error
  phase: NameResolution
- message: cannot infer a concrete type for 1 body-local expression
  span:
    start: 0
    end: 34
  severity: Error
  phase: TypeChecking
- message: "function 'main' must return Nil, but returns `Int`"
  span:
    start: 0
    end: 34
  severity: Error
  phase: TypeChecking
