tests/snapshots/diagnostic_snapshots__diag_unresolved_name_with_suggestion.snap
---
source: tests/diagnostic_snapshots.rs
assertion_line: 39
expression: result.diagnostics
---
- message: "unresolved name `compue`; did you mean `compute`?"
  span:
    start: 66
    end: 72
  severity: Error
  phase: NameResolution
- message: "function 'main' must return Nil, but returns `Int`"
  span:
    start: 47
    end: 79
  severity: Error
  phase: TypeChecking
