tests/snapshots/diagnostic_snapshots__diag_unresolved_type.snap
---
source: tests/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "function 'main' must return Nil, but returns `Foo`"
  span:
    start: 0
    end: 23
  severity: Error
  phase: TypeChecking
- message: "type error in function 'main': expected `Foo`, found `Nat`"
  span:
    start: 17
    end: 23
  severity: Error
  phase: TypeChecking
